%% Sunrise Dental Clinic - entity relationship diagram
%% Solid = FOREIGN KEY enforced.  Dotted = uid reference, no constraint.

erDiagram
    USER_ACCOUNT {
        varchar uid PK
        varchar account_no UK "readable YYMMDD+ROLE+NNNN"
        varchar username UK "staff sign-in, NULL for patients"
        varchar email UK "unique, the patient login"
        varchar password_hash "PBKDF2 iterations:salt:hash"
        varchar display_name
        enum role "PATIENT RECEPTIONIST DENTIST ADMIN"
        bool active
        int failed_attempts "lock-out counter"
        bool locked
        timestamp created_at
    }

    PATIENT {
        varchar id PK
        varchar user_uid FK "null for a walk-in with no portal account"
        varchar name
        varchar address
        varchar contact_number
        varchar email
        date dob
        text diagnosis_details "the patient's own history"
        varchar patient_no UK "readable YYMMDDPATNNNN"
    }

    DENTIST {
        varchar id PK "YYMMDDDENNNNN for new dentists"
        varchar user_uid FK "null until a login is issued"
        varchar name
        varchar specialization
        varchar phone "public, edited on the profile"
        decimal consultation_fee "charged per appointment"
        bool active
    }

    TREATMENT {
        varchar id PK
        varchar name "the brief's treatment type"
        varchar description
        decimal base_cost
        bool active
    }

    PATIENT_NOTE {
        varchar id PK
        varchar patient_id FK
        enum category "ALLERGY MEDICATION CONDITION OTHER"
        varchar detail "written by the patient, not by staff"
        bool critical "surfaces as a banner to the treating dentist"
        timestamp created_at
        timestamp updated_at
    }

    DENTIST_SESSION {
        varchar id PK
        varchar dentist_id FK
        date session_date
        time start_time
        time end_time
        int slot_duration_minutes
        varchar published_by_uid "the receptionist who published it"
    }

    SLOT {
        varchar id PK "dentistId_date_startTime"
        varchar session_id FK
        varchar dentist_id "denormalised for query speed"
        date slot_date
        time start_time
        int duration_minutes
        enum status "OPEN BOOKED"
        varchar appointment_no UK "unique: the double-booking backstop"
    }

    APPOINTMENT {
        varchar appointment_no PK "APT-yyyymmdd-####"
        varchar patient_id FK
        varchar dentist_id FK
        varchar slot_id "the slot it consumed"
        varchar treatment_id FK
        date appointment_date
        time appointment_time
        enum status "CONFIRMED COMPLETED BILLED CANCELLED"
        text diagnosis "CONFIDENTIAL: treating dentist and patient only"
        text patient_reason "the Other booking in own words"
        decimal custom_price "dentist-entered, NULL for catalog visits"
        varchar created_by_uid "who booked it"
        enum created_by_role
        timestamp created_at
    }

    BILL {
        varchar id PK
        varchar appointment_no FK "unique: one bill per appointment"
        varchar patient_id
        varchar dentist_id
        varchar receptionist_uid "earns the service charge"
        decimal consultation_fee
        decimal treatment_cost
        decimal service_charge
        decimal discount
        decimal tax
        decimal total
        decimal dentist_earning "three-way revenue split"
        decimal clinic_earning
        decimal receptionist_earning
        timestamp issued_at
        varchar issued_by_uid
    }

    NOTIFICATION {
        varchar id PK
        varchar appointment_no FK
        enum channel "EMAIL SMS"
        varchar recipient
        varchar subject
        text body
        enum status "SENT FAILED LOGGED"
        timestamp sent_at
    }

    COMPLAINT {
        varchar id PK
        varchar patient_id FK "who raised it, NULL when anonymous"
        varchar dentist_id FK "who it names - never shown to them, NULL for general"
        varchar appointment_no FK "optional, the visit it concerns"
        enum category "CONDUCT CLINICAL_CONCERN WAIT_TIME BILLING OTHER"
        text detail "the patient's own account, never edited by staff"
        enum status "SUBMITTED UNDER_REVIEW RESOLVED DISMISSED"
        timestamp submitted_at
        varchar reviewed_by_uid "the administrator"
        varchar resolution "required when closing"
        timestamp resolved_at
    }

    DENTIST_REVIEW {
        varchar id PK
        varchar appointment_no FK "UNIQUE - one review per visit"
        varchar dentist_id FK
        varchar patient_id FK "the author, never shown to the dentist"
        tinyint rating "1 to 5"
        varchar comment "optional"
        timestamp submitted_at
        timestamp updated_at "editable for 30 days"
    }

    AUDIT_EVENT {
        varchar id PK
        varchar actor_uid "who did it"
        enum actor_role
        varchar action
        varchar target_type
        varchar target_id
        timestamp event_time
    }

    APPOINTMENT_COUNTER {
        char day_key PK "yyyyMMdd"
        int counter_value "last number issued that day"
    }

    DENTIST_TREATMENT {
        varchar dentist_id PK,FK "what this dentist performs"
        varchar treatment_id PK,FK
    }

    PERSON_COUNTER {
        varchar seq_key PK "ROLE-yyyyMMdd, e.g. PAT-20260904"
        int counter_value "last person number issued"
    }

    CLINIC_SETTING {
        varchar setting_key PK "identity, revenue shares, charges"
        varchar setting_value "edited on admin screens"
    }

    USER_ACCOUNT |o--o| PATIENT  : "portal account for"
    USER_ACCOUNT |o--o| DENTIST  : "staff login for"

    DENTIST      ||--o{ DENTIST_SESSION : "works"
    DENTIST_SESSION ||--o{ SLOT         : "divides into"
    SLOT         |o--o| APPOINTMENT     : "booked as"
    DENTIST      ||--o{ DENTIST_TREATMENT : "offers"
    DENTIST_TREATMENT }o--|| TREATMENT   : "lists"

    PATIENT      ||--o{ PATIENT_NOTE : "declares"
    PATIENT      ||--o{ COMPLAINT : "raises"
    DENTIST      ||--o{ COMPLAINT : "named in"
    APPOINTMENT  |o--o{ COMPLAINT : "concerns"
    APPOINTMENT  ||--o| DENTIST_REVIEW : "rated by"
    DENTIST      ||--o{ DENTIST_REVIEW : "rated"
    PATIENT      ||--o{ DENTIST_REVIEW : "writes"
    PATIENT      ||--o{ APPOINTMENT : "books"
    DENTIST      ||--o{ APPOINTMENT : "treats"
    TREATMENT    |o--o{ APPOINTMENT : "type of"

    APPOINTMENT  ||--o| BILL         : "billed by"
    APPOINTMENT  ||--o{ NOTIFICATION : "triggers"

    USER_ACCOUNT ||..o{ APPOINTMENT     : "created by"
    USER_ACCOUNT ||..o{ DENTIST_SESSION : "published by"
    USER_ACCOUNT ||..o{ BILL            : "issued by receptionist"
    USER_ACCOUNT ||..o{ AUDIT_EVENT     : "acted"
